      Sys#opendir, Sys::IO#opendir
      Sys#closedir, Sys::IO#closedir
      Sys#readdir, Sys::IO#readdir
      Sys#rewinddir, Sys::IO#rewinddir
      Sys#telldir, Sys::IO#telldir
      Sys#seekdir, Sys::IO#seekdir
      Sys::IO::DirStream#DESTROY
      Sys::IO::Dirent#d_name
  
0.540 2025-05-23
  [Incompatible Changes]
    * Sys#readdir method returns a file name instead of a directory entry.
0.540 2025-05-23
  [Incompatible Changes]
    * Sys#readdir method returns a file name instead of a directory entry.
    
0.539 2025-05-23
  [Improvement with Incompatible Changes]
    * In this release, UTF-8 strings passed as arguments to the methods that calls Windows system calls are now handled correctly.
      Sys::IO#open
      Sys#open, Sys::IO#fopen
      Sys#chmod, Sys::IO#chmod
      Sys::IO#access
      Sys#mkdir, Sys::IO#mkdir
      Sys#rmdir, Sys::IO#rmdir
      Sys#chdir, Sys::IO#chdir
      Sys::IO#truncate
      Sys::Process#execv
      Sys#unlink, Sys::IO::Windows#unlink
      Sys#rename, Sys::IO::Windows#rename
      Sys#symlink, Sys::IO::Windows#symlink
      Sys::IO::Windows#_realpath
      Sys::IO#getcwd
      Sys::IO#_getdcwd
  [Incompatible Changes]
    * Remove Sys::IO#_fullpath method.
    * The first argument $buf of Sys::IO#getcwd must be undef. Otherwise an exception is thrown.
    * The second argument $buffer of Sys::IO#getcwd must be undef. Otherwise an exception is thrown.
  [Internal Changes]
    * Add Sys#_getcwd method only for Cwd class.
    * Add Sys#_getdcwd method only for Cwd class.
    * Add Sys#_realpath method only for Cwd class.
  [New Features]
    * Add the following methods to Sys::IO::Stat class.
      dev
      ino
      mode
      nlink
      uid
      gid
      rdev
      size
      blksize
      blocks
      mtime
      atime
      ctime
   
0.538 2025-05-21
  [Bug Fix]
    * Fix bugs that Sys::IO::Windows#realpath method failed when the file is not symbolic link.
0.537 2025-05-20
  [Incompatible Changes]